--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=12345
-spring.datasource.url=jdbc:postgresql://localhost:5432/warehouse
+spring.datasource.url=jdbc:postgresql://localhost:5433/warehouse
 spring.jpa.hibernate.ddl-auto=update
