--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.datasource.url=jdbc:postgresql://localhost:5433/warehouse
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
